--- a/front-end/src/components/composite/uploadModal/uploadModal.module.scss
+++ b/front-end/src/components/composite/uploadModal/uploadModal.module.scss
@@ -17,3 +17,33 @@
     margin-top: 1.25rem;
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .uploadModal {
+    width: 35rem;
+    height: 32rem;
+    padding: 0 1.5rem;
+
+    .submitButton {
+      margin-top: 1rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .uploadModal {
+    width: 30rem;
+    height: 30rem;
+    padding: 0 1rem;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .uploadModal {
+    width: 90vw;
+    max-width: 26rem;
+    height: auto;
+    min-height: 26rem;
+    padding: 0 1rem;
+  }
+}
